Fix: PDF-Generierung für Rechnungen und besserer Umgang mit Umgebungsvariablen

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
-    "@supabase/supabase-js": "^2.49.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -18,8 +17,9 @@
     "@types/react-dom": "^19.0.4",
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.4.8",
+    "csv-parser": "^3.2.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.0",
+    "jspdf": "^2.5.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -51,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@supabase/supabase-js": "^2.49.1",
+    "dotenv": "^16.4.7",
+    "uuid": "^11.1.0"
   }
 }
