Update manifest.json für Deployment-Anzeige

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Inventar",
-  "name": "Inventar Management System",
+  "name": "Inventar Management System von Diego Rodrigeuz",
   "icons": [
     {
       "src": "favicon.ico",
